--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-    <link rel="stylesheet" href="/css/global.css"> <!-- Link to the CSS file -->
+    <link rel="preload" href="/css/global.css" as="style" />
+    <link rel="stylesheet" href="/css/global.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
