fix/meta-information (#73)
On branch fix/meta-information
Changes to be committed:
modified:   index.html

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>kurtisrogers.com</title>
+  <head>    
+    <title>Kurtis Rogers</title>
     
     <!-- meta -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="" />
-    <meta property="og:url" content="" />
+    <meta name="description" content="Fullstack Node Software Engineer from Bristol, UK" />
+    <meta property="og:url" content="https://kurtisrogers.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="Kurtis Rogers" />
+    <meta property="og:description" content="Fullstack Node Software Engineer from Bristol, UK" />
+    <meta property="og:image" content="/images/optimised/deepspace-md.webp" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="" />
-    <meta property="twitter:url" content="" />
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:description" content="" />
-    <meta name="twitter:image" content="" />
+    <meta property="twitter:domain" content="https://kurtisrogers.com" />
+    <meta property="twitter:url" content="https://kurtisrogers.com" />
+    <meta name="twitter:title" content="Kurtis Rogers" />
+    <meta name="twitter:description" content="Fullstack Node Software Engineer from Bristol, UK" />
+    <meta name="twitter:image" content="/images/optimised/deepspace-md.webp" />
 
     <!-- linked resources -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
